--- a/index.html
+++ b/index.html
@@ -23,15 +23,27 @@
             </div>
 
             <ul class="heder-menu desktop-element">
-                <a href="#" class="menu__item"><li>Why Alivio</li></a>
-                <a href="" class="menu__item"><li>Solutions</li></a>
-                <a href="" class="menu__item"><li>Community</li></a>
-                <a href="" class="menu__item"><li>Pricing</li></a>
+                <a href="#" class="menu__item">
+                    <li>Why Alivio</li>
+                </a>
+
+                <a href="" class="menu__item">
+                    <li>Solutions</li>
+                </a>
+
+                <a href="" class="menu__item">
+                    <li>Community</li>
+                </a>
+
+                <a href="" class="menu__item">
+                    <li>Pricing</li>
+                </a>
             </ul>
         </div>
 
         <div class="header__right">
             <a href="#" class="heder-signin">Sign In</a>
+
             <button class="header-signup">Start Trial</button>
         </div>
     </nav>
@@ -133,12 +145,18 @@
         
                     <div class="product-mini">
                         <h3 class="cust">Customized For</h3>
+
                         <hr class="line">
+
                         <img src="./images/Image.png" alt="" class="avatar">
+
                         <span class="name">Mikayla</span>
+
                         <h2 class="contents">Your custom contents</h2>
+
                         <ul class="list">
                             <li class="list-item">Understand Your Stress</li>
+
                             <li class="list-item">Anger Management</li>
                         </ul>
                     </div>
@@ -164,11 +182,23 @@
         <div class="wrapper">
             <div class="footer-wrapper">
                 <h2 class="footer__title">Alivio</h2>
+
                 <ul class="footer__list">
-                    <a href="" class="footer__list-item"><li>Why Alivio</li></a>
-                    <a href="" class="footer__list-item"><li>Solutions</li></a>
-                    <a href="" class="footer__list-item"><li>Community</li></a>
-                    <a href="" class="footer__list-item"><li>Pricing</li></a>
+                    <a href="" class="footer__list-item">
+                        <li>Why Alivio</li>
+                    </a>
+
+                    <a href="" class="footer__list-item">
+                        <li>Solutions</li>
+                    </a>
+
+                    <a href="" class="footer__list-item">
+                        <li>Community</li>
+                    </a>
+
+                    <a href="" class="footer__list-item">
+                        <li>Pricing</li>
+                    </a>
                 </ul>
             </div>
         </div>
